08cd1de49520f12c414790e9f2614eb31dc7d86b Fix: Correct alignment error when used with other components on the same line of a DT layout
Sync to source repo @08cd1de49520f12c414790e9f2614eb31dc7d86b

--- a/css/buttons.dataTables.css
+++ b/css/buttons.dataTables.css
@@ -222,7 +222,6 @@ div.dt-buttons > div.dt-button-split .dt-button {
   box-sizing: border-box;
   margin-left: 0.167em;
   margin-right: 0.167em;
-  margin-bottom: 0.333em;
   padding: 0.5em 1em;
   cursor: pointer;
   font-size: 0.88em;
